# ChangeLog for dev-python/python-dateutil
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-dateutil/ChangeLog,v 1.32 2011/11/26 16:26:21 hwoarang Exp $

  26 Nov 2011; Markos Chandras <hwoarang@gentoo.org> python-dateutil-1.5.ebuild:
  Ignore failures of tests with Jython. Update DESCRIPTION and LICENSE. Use
  SLOT="python-2". Add "examples" USE flag. Use sed instead of a patch. Patch by
  Arfrever.

  07 Jun 2011; Naohiro Aota <naota@gentoo.org> python-dateutil-1.5.ebuild:
  Add ~x86-fbsd keyword

  23 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  python-dateutil-1.5.ebuild:
  Keyword ~ppc64 wrt #341699

  30 May 2010; Raúl Porcel <armin76@gentoo.org> python-dateutil-1.5.ebuild:
  ia64/x86 stable wrt #318195

  17 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-dateutil-1.5.ebuild:
  amd64 stable (tested by rullzer) (bug #318195).

  10 May 2010; nixnut <nixnut@gentoo.org> python-dateutil-1.5.ebuild:
  ppc stable #318195

*python-dateutil-1.5 (02 Apr 2010)

  02 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +python-dateutil-1.5.ebuild:
  Version bump.

  08 Feb 2010; Peter Volkov <pva@gentoo.org>
  python-dateutil-1.4.1-r1.ebuild:
  Add inherit eutils for epatch.

  17 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  python-dateutil-1.4.1-r1.ebuild:
  ia64 stable wrt #297713

  07 Jan 2010; Joseph Jezak <josejx@gentoo.org>
  python-dateutil-1.4.1-r1.ebuild:
  Marked ppc stable for bug #297713.

  03 Jan 2010; Markus Meier <maekke@gentoo.org>
  python-dateutil-1.4.1-r1.ebuild:
  x86 stable, bug #297713

  24 Dec 2009; Pacho Ramos <pacho@gentoo.org>
  python-dateutil-1.4.1-r1.ebuild:
  amd64 stable, bug 297713

  20 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-dateutil-1.4.1-r1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  11 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  python-dateutil-1.4.1-r1.ebuild: