@@ -1,25 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX python-dateutil-1.4.1-locale.patch 532 RMD160 77146aa3d872a5631c2dec89d39514665591ebea SHA1 63430bda467a60e4e949c2757a01eabe63332631 SHA256 15583bb1e7edb42c1ea107b146b1a17259e876cc5006a342ddb95d630637671d
 DIST python-dateutil-1.5.tar.gz 232384 RMD160 5f7c80ec9bf68f1708213596a994130964e91e52 SHA1 f489e1a70e415731d401422f711670288571040b SHA256 c08aca7d85f8f8eed61e83b3423b829262c596a9a78f7ca3de0bcee2217d0e3b
+DIST python-dateutil-2.0.tar.gz 255439 RMD160 a7ae3c4948c69471c95466236a388d63fcdac120 SHA1 946337a273866cc4f51d32c86cdbc4209ab84a43 SHA256 8aab12d0e944b33b5e347bcf1963819d8ad925c0617e9257322ef475760c0aab
 EBUILD python-dateutil-1.5.ebuild 1560 RMD160 49a483f089ea7cc20ea6d885f4551934cef6cabf SHA1 abbed2a45cb49a1565e14c9678f02737bf5823e5 SHA256 7124e48161612355598e90de5fef0571b1ece6ebad838a54194aadad723a9d53
-MISC ChangeLog 4522 RMD160 687e6e944544389211e460b632667ab6ac0a3170 SHA1 2112b8aa460345fc97f54b886d1112e201b9b2d9 SHA256 36d7a675ae47957dcbdd5ef7e4050904724b52bde424cfcb931555470201f10d
+EBUILD python-dateutil-2.0.ebuild 1720 RMD160 d409fe49b45d22ef50966c2616c1ccc0b49a97ce SHA1 3cac491dd477630f49a69a59af6433af995d7435 SHA256 5f3637da986d61ff3af48c64180ffd16510e91d1fcad0486958bfe8c96b631a0
+MISC ChangeLog 4675 RMD160 ef0481292c90cf6013677810dbeb0928bc47996d SHA1 1e2e6ce9908b9f3d91f29431b1d162b37dcce0ce SHA256 e3abd1699aa3644ec010293aefc042f2f594b31e1b2c3538ad6af027aede63f5
 MISC metadata.xml 321 RMD160 a4032f38afe72e05418ce030fe0144c44f6efa50 SHA1 2b6e67f28acd888380da9a608f65133ec8427602 SHA256 bc09a8d19122457f72a5cc7b348a41f4208b8c89d32cd20bfe0d39bb71630df3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBCgAGBQJO0RMtAAoJEPqDWhW0r/LC0mYP/i3R4k+7ecppKT0Jr2Mec0d/
-lYsXfsBEPZjp55Ghwegv/XrfK0inEgs5AFFIThc+9BPN5cSwSKODD8rO7+LGcAlG
-9s7rOv41+YRvthfcxi6VO0RIKH/ee4G7uZfSAyllkJ/JJ+oOY0wZbUmWYDHKsdRa
-lZ6ybQjIfm/Jf/XorHxauir+TLzt935DJMVLyz/e1JSQ6z2dilPg0zaKC3HwnCtJ
-iJCNjyf80DQiJvMz/LlW80r82JQED6Ut/Fgiu6/yiYcL6w8p+tOk1iIGVwl+Vs4m
-gNwartU/3sY3t3S1/9dGoCE/wqtr3ROC708LXmWWjwbE7itmJu4F4WNpXhA6mvOs
-AnUcFD/3PpGGt9P9yVIq/Erck52tffe/Q0hryUnWNWuBeretq+5+CXynfS8pz9Pi
-cLUxG3Ntcw78svpDdahWdZ8/01KxiPD4KplIIQN/1kFvsRXgImPQaqhgcC1v8K+/
-Q+u/aOepjorAwRnE4wFq7hDlWrEfaj6PVy4Xyto6sY6wKGkoNmtz/hmGaAuIU9kn
-i8Fo17kcc97fmTBtdWFFS82nZxidzlu+nRYEIL3xZthtS2VlXAurw2yjlPfiFahz
-hYSEeJlO2nJETiXRC6SwHmDWBXA68iOmCpmAd3BDceuN/2MXtR7rbqoeRyBVTVzI
-kJ6WWUhzEZYene+cQ7cs
-=6HfR
+iEYEARECAAYFAk8YOFgACgkQ1ycZbhPLE2AXzACbB1twIso+pyz1GnFNjdNpmPey
+0tAAnA7c2KpVt6J6W9HRLJsJgc0VUz4M
+=3XIn
 -----END PGP SIGNATURE-----
