@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-dateutil
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-dateutil/ChangeLog,v 1.32 2011/11/26 16:26:21 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-dateutil/ChangeLog,v 1.33 2012/01/19 15:35:44 bicatali Exp $
+
+*python-dateutil-2.0 (19 Jan 2012)
+
+  19 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org>
+  +python-dateutil-2.0.ebuild:
+  Version bump (python3 only)
 
   26 Nov 2011; Markos Chandras <hwoarang@gentoo.org> python-dateutil-1.5.ebuild:
   Ignore failures of tests with Jython. Update DESCRIPTION and LICENSE. Use
